--- a/collegechef/assets/.babelrc
+++ b/collegechef/assets/.babelrc
@@ -1,5 +1,12 @@
 {
-    "presets": [
-        "@babel/preset-env"
-    ]
+    "presets":  [
+      ["@babel/env", {
+        "modules": false,
+        "useBuiltIns": "usage"
+      }]
+      ],
+    "plugins": [
+        "@babel/plugin-proposal-class-properties",
+        "@babel/plugin-transform-runtime"
+      ]
 }
