--- a/collegechef/assets/package.json
+++ b/collegechef/assets/package.json
@@ -1,40 +1,49 @@
 {
-  "repository": {},
-  "license": "MIT",
-  "scripts": {
-    "deploy": "webpack --mode production",
-    "watch": "webpack --mode development --watch"
-  },
-  "dependencies": {
-    "bootstrap": "^4.3.1",
-    "deep-freeze-strict": "^1.1.1",
-    "jquery": "^3.4.1",
-    "npm": "^6.13.0",
-    "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html",
-    "popper.js": "^1.16.0",
-    "react": "^16.11.0",
-    "react-bootstrap": "^1.0.0-beta.14",
-    "react-dom": "^16.11.0",
-    "react-redux": "^7.1.3",
-    "react-router-dom": "^5.1.2",
-    "redux": "^4.0.4"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-react": "^7.7.0",
-    "babel-loader": "^8.0.0",
-    "copy-webpack-plugin": "^4.5.0",
-    "css-loader": "^2.1.1",
-    "fibers": "^4.0.2",
-    "mini-css-extract-plugin": "^0.4.0",
-    "node-gyp": "^6.0.1",
-    "node-sass": "^4.13.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "sass-loader": "^8.0.0",
-    "uglifyjs-webpack-plugin": "^1.2.4",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
-  }
+    "repository": {},
+    "license": "MIT",
+    "scripts": {
+        "deploy": "webpack --mode production",
+        "watch": "webpack --mode development --watch"
+    },
+    "dependencies": {
+        "bootstrap": "^4.3.1",
+        "deep-freeze-strict": "^1.1.1",
+        "jquery": "^3.4.1",
+        "npm": "^6.13.0",
+        "phoenix": "file:../deps/phoenix",
+        "phoenix_html": "file:../deps/phoenix_html",
+        "popper.js": "^1.16.0",
+        "react": "^16.11.0",
+        "react-bootstrap": "^1.0.0-beta.14",
+        "react-dom": "^16.11.0",
+        "react-hot-loader": "^4.12.18",
+        "react-redux": "^7.1.3",
+        "react-router-dom": "^5.1.2",
+        "redux": "^4.0.4"
+    },
+    "devDependencies": {
+        "@babel/cli": "^7.0.0",
+        "@babel/core": "^7.0.0",
+        "@babel/plugin-proposal-class-properties": "^7.7.0",
+        "@babel/plugin-proposal-export-default-from": "^7.0.0",
+        "@babel/plugin-transform-async-to-generator": "^7.7.0",
+        "@babel/plugin-transform-runtime": "^7.6.2",
+        "@babel/polyfill": "^7.7.0",
+        "@babel/preset-env": "^7.0.0",
+        "@babel/preset-react": "^7.7.0",
+        "babel-eslint": "^9.0.0",
+        "babel-jest": "^25.0.0",
+        "babel-loader": "^8.0.0",
+        "copy-webpack-plugin": "^4.5.0",
+        "css-loader": "^2.1.1",
+        "fibers": "^4.0.2",
+        "mini-css-extract-plugin": "^0.4.0",
+        "node-gyp": "^6.0.1",
+        "node-sass": "^4.13.0",
+        "optimize-css-assets-webpack-plugin": "^5.0.3",
+        "sass-loader": "^8.0.0",
+        "uglifyjs-webpack-plugin": "^1.2.4",
+        "webpack": "^4.41.2",
+        "webpack-cli": "^3.3.10"
+    }
 }
