--- a/collegechef/assets/package.json
+++ b/collegechef/assets/package.json
@@ -18,7 +18,9 @@
         "react-dom": "^16.11.0",
         "react-hot-loader": "^4.12.18",
         "react-redux": "^7.1.3",
+        "react-redux-form": "^1.16.8",
         "react-router-dom": "^5.1.2",
+        "reactstrap": "^8.0.1",
         "redux": "^4.0.4"
     },
     "devDependencies": {
