--- a/collegechef/assets/package.json
+++ b/collegechef/assets/package.json
@@ -45,6 +45,7 @@
         "optimize-css-assets-webpack-plugin": "^5.0.3",
         "sass-loader": "^8.0.0",
         "uglifyjs-webpack-plugin": "^1.2.4",
+        "url-loader": "^2.2.0",
         "webpack": "^4.41.2",
         "webpack-cli": "^3.3.10"
     }
