--- a/collegechef/assets/package.json
+++ b/collegechef/assets/package.json
@@ -6,8 +6,12 @@
         "watch": "webpack --mode development --watch"
     },
     "dependencies": {
+        "@fortawesome/fontawesome": "^1.1.8",
+        "@fortawesome/fontawesome-free-solid": "^5.0.13",
+        "@fortawesome/react-fontawesome": "^0.1.7",
         "bootstrap": "^4.3.1",
         "deep-freeze-strict": "^1.1.1",
+        "font-awesome": "^4.7.0",
         "jquery": "^3.4.1",
         "npm": "^6.13.0",
         "phoenix": "file:../deps/phoenix",
@@ -15,11 +19,14 @@
         "popper.js": "^1.16.0",
         "react": "^16.11.0",
         "react-bootstrap": "^1.0.0-beta.14",
+        "react-dnd": "^5.0.0",
+        "react-dnd-html5-backend": "^3.0.2",
         "react-dom": "^16.11.0",
         "react-hot-loader": "^4.12.18",
         "react-redux": "^4.4.10",
         "react-redux-form": "^1.16.8",
         "react-router-dom": "^5.1.2",
+        "react-tag-input": "^6.4.1",
         "reactstrap": "^8.0.1",
         "redux": "^3.7.2"
     },
