--- a/collegechef/assets/package.json
+++ b/collegechef/assets/package.json
@@ -18,6 +18,7 @@
         "phoenix_html": "file:../deps/phoenix_html",
         "popper.js": "^1.16.0",
         "react": "^16.11.0",
+        "react-animation-components": "^3.0.0",
         "react-bootstrap": "^1.0.0-beta.14",
         "react-dnd": "^5.0.0",
         "react-dnd-html5-backend": "^3.0.2",
