--- a/collegechef/assets/package.json
+++ b/collegechef/assets/package.json
@@ -22,6 +22,7 @@
         "react": "^16.11.0",
         "react-animation-components": "^3.0.0",
         "react-bootstrap": "^1.0.0-beta.14",
+        "react-card-flip": "^1.0.10",
         "react-dnd": "^5.0.0",
         "react-dnd-html5-backend": "^3.0.2",
         "react-dom": "^16.11.0",
